--- a/getcwd/README
+++ b/getcwd/README
@@ -1,3 +1,5 @@
 It is function that get current working directory
+you must include <unistd.h> file
 
 // getcwd함수는 현재 작업중인 디렉토리의 위치를 구하는 작업을 한다.
+// unistd.h 파일을 꼭 include 해라!
