--- a/cp/ReadMe
+++ b/cp/ReadMe
@@ -1,2 +1,3 @@
 1. stat함수를 사용해서 복사할 대상의 정보를 읽어온다.
-2. open으로 복사할 파일을 못읽거나, write로 새로 생성할수 없으면 종료한다.
+2. open으로 복사할 파일을 못읽거나, creat로 새로 생성할수 없으면 종료한다.
+3. open으로 얻은 id를 이용해서 read 후 write한다.
